# todo

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  package-lock.json  package.json
.github/workflows/: release.yml
desktop/: app.js  index.html  styles.css
desktop/app/: deadline-date.js  ledger-contract.js  ledger-session.js  list-search-controller.js  pet-component.js  selectors.js  shell-controller.js  state.js  subtask-controller.js  task-list-controller.js  update-controller.js  views.js  weekly-completion-controller.js  window-controller.js
docs/: Windows发布与自动更新-v0.1.md  产品设计方案-v0.1.md  产品路线图-v0.1.md  代码架构与模块边界-v0.1.md  任务状态与事件账本-v0.1.md  子代办完整交互与领域设计-v0.1.md  本地事件历史、金币账本与异常恢复技术实验-v0.1.md  本地账本源码证据索引-v0.1.md  桌面悬浮窗口技术实验-v0.1.md  界面与交互设计说明-v0.2.md  界面设计说明-v0.1.md  视觉方向决策-v0.3.md  视觉风格对比-v0.2.md
prototype/: app.js  index.html  styles.css
scripts/: check-release-version.mjs  release-changelog.mjs  release-changelog.test.mjs
src-tauri/: Cargo.toml  tauri.candidate.conf.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/examples/: verify_updater_signature.rs
src-tauri/icons/: icon.icns
src-tauri/src/: app.rs  frontend_probe.rs  integration_smoke.rs  main.rs  runtime_profile.rs  window_geometry.rs
src-tauri/src/app_update/: commands.rs  mod.rs  service.rs
src-tauri/src/desktop/: commands.rs  mod.rs  state.rs  tray.rs  window.rs
src-tauri/src/ledger/: commands.rs  domain.rs  mod.rs  service.rs  smoke.rs  sqlite.rs
src-tauri/src/ledger/smoke/: tests.rs
src-tauri/src/ledger/sqlite/: integrity.rs  schema.rs
(+28 files in other folders)
